fix: Various fixes to parameterize flicker times.

--- a/styles/intensity_reward.css
+++ b/styles/intensity_reward.css
@@ -43,7 +43,7 @@
 }
 
 #intensity_up_text.flicker {
-    animation: flicker_effect 0.5s ease-in-out 2;
+    animation: flicker_effect 0.5s ease-in-out;
 }
 
 @keyframes flicker_effect {
